5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1671_1100.log
== TEST (2019-04-22 19:12:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:16:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc != 2) or (vc != 5) or (vc != 10) or (vc != 20) or (vc != 50) or (vc != 100)):
	print("Animal: Invalido")
else:
	elif(vc == 2):
		print("Animal: Tartaruga")
	
-- ERROR:
File "XXXX", line 10
    elif(vc == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:18:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc != 2) or (vc != 5) or (vc != 10) or (vc != 20) or (vc != 50) or (vc != 100)):
	print("Animal: Invalido")
elif(vc == 2):
print("Animal: Tartaruga")
	
-- ERROR:
File "XXXX", line 10
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:20:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc == 2) or (vc == 5) or (vc == 10) or (vc == 20) or (vc == 50) or (vc == 100)):
	elif(vc == 2):
		print("animal: Tartaruga")
	
-- ERROR:
File "XXXX", line 8
    elif(vc == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:21:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc == 2) or (vc == 5) or (vc == 10) or (vc == 20) or (vc == 50) or (vc == 100)):
elif(vc == 2):
		print("animal: Tartaruga")
	
-- ERROR:
File "XXXX", line 8
    elif(vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:22:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc == 2) or (vc == 5) or (vc == 10) or (vc == 20) or (vc == 50) or (vc == 100)):
elif (vc == 2):
		print("animal: Tartaruga")
	
-- ERROR:
File "XXXX", line 8
    elif (vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:23:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc == 2) or (vc == 5) or (vc == 10) or (vc == 20) or (vc == 50) or (vc == 100)):
elif (vc == 2):
	print( "Animal: tartaruga")
elif (vc == 5):
	
	
-- ERROR:
File "XXXX", line 8
    elif (vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:25:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc == 2) or (vc == 5) or (vc == 10) or (vc == 20) or (vc == 50) or (vc == 100)):
elif (vc == 2):
	print( "Animal: tartaruga")
elif (vc == 5):
	print( "Animal: garça ")
	
	
-- ERROR:
File "XXXX", line 8
    elif (vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:26:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc != 2) or (vc != 5) or (vc != 10) or (vc != 20) or (vc != 50) or (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: tartaruga")
elif (vc == 5):
	print( "Animal: garça ")
	
	
-- OUTPUT:
100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:27:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc != 2) or (vc != 5) or (vc != 10) or (vc != 20) or (vc != 50) or (vc != 100)):
	print("Animal: Invalido")
else:
elif (vc == 2):
	print( "Animal: tartaruga")
elif (vc == 5):
	print( "Animal: garça ")
elif (vc == 10)
	print( "Animal: arara")
elif ()
-- ERROR:
File "XXXX", line 10
    elif (vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:30:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print(vc)

if((vc != 2) or (vc != 5) or (vc != 10) or (vc != 20) or (vc != 50) or (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: Tartaruga")
elif (vc == 5):
	print( "Animal: Garça ")
elif (vc == 10):
	print( "Animal: Arara")
elif (vc == 20):
	print( "Animal: Mico-leao-dourado")
elif (vc == 50):
	print( "Animal: Onça-pintada")
elif (vc == 100):
	print( "Animal: Garoupa")
-- OUTPUT:
100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:31:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print("Entrada:" , vc)

if((vc != 2) or (vc != 5) or (vc != 10) or (vc != 20) or (vc != 50) or (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: Tartaruga")
elif (vc == 5):
	print( "Animal: Garça ")
elif (vc == 10):
	print( "Animal: Arara")
elif (vc == 20):
	print( "Animal: Mico-leao-dourado")
elif (vc == 50):
	print( "Animal: Onça-pintada")
elif (vc == 100):
	print( "Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:32:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print("Entrada:" , vc)

if((vc != 2) and (vc != 5) and (vc != 10) and (vc != 20) and (vc != 50) and (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: Tartaruga")
elif (vc == 5):
	print( "Animal: Garça ")
elif (vc == 10):
	print( "Animal: Arara")
elif (vc == 20):
	print( "Animal: Mico-leao-dourado")
elif (vc == 50):
	print( "Animal: Onça-pintada")
elif (vc == 100):
	print( "Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:32:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print("Entrada:" , vc)

if((vc != 2) and (vc != 5) and (vc != 10) and (vc != 20) and (vc != 50) and (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: Tartaruga")
elif (vc == 5):
	print( "Animal: Garça ")
elif (vc == 10):
	print( "Animal: Arara")
elif (vc == 20):
	print( "Animal: Mico-leao-dourado")
elif (vc == 50):
	print( "Animal: Onça-pintada")
elif (vc == 100):
	print( "Animal: Garoupa")
-- EXECUTION TIME:
0.249785
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:32:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print("Entrada:" , vc)

if((vc != 2) and (vc != 5) and (vc != 10) and (vc != 20) and (vc != 50) and (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: Tartaruga")
elif (vc == 5):
	print( "Animal: Garça ")
elif (vc == 10):
	print( "Animal: Arara")
elif (vc == 20):
	print( "Animal: Mico-leao-dourado")
elif (vc == 50):
	print( "Animal: Onça-pintada")
elif (vc == 100):
	print( "Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:33:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print("Entrada:" , vc)

if((vc != 2) and (vc != 5) and (vc != 10) and (vc != 20) and (vc != 50) and (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: Tartaruga")
elif (vc == 5):
	print( "Animal: Garca ")
elif (vc == 10):
	print( "Animal: Arara")
elif (vc == 20):
	print( "Animal: Mico-leao-dourado")
elif (vc == 50):
	print( "Animal: Onca-pintada")
elif (vc == 100):
	print( "Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:33:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("valor de uma cedula:"))
print("Entrada:" , vc)

if((vc != 2) and (vc != 5) and (vc != 10) and (vc != 20) and (vc != 50) and (vc != 100)):
	print("Animal: Invalido")
elif (vc == 2):
	print( "Animal: Tartaruga")
elif (vc == 5):
	print( "Animal: Garca ")
elif (vc == 10):
	print( "Animal: Arara")
elif (vc == 20):
	print( "Animal: Mico-leao-dourado")
elif (vc == 50):
	print( "Animal: Onca-pintada")
elif (vc == 100):
	print( "Animal: Garoupa")
-- EXECUTION TIME:
0.154962
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
